--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,4 +1,3 @@
-<div class="container">
-  <!-- TEST SERVER / DATABASE CONNECTIONS -->
-    <button type="button" (click)="findAllRegistry()" class="btn btn-primary">Try Get</button>
-</div>
+<app-navbar></app-navbar>
+
+<router-outlet></router-outlet>
