--- a/angular-client/src/styles.css
+++ b/angular-client/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.snackbar_success {
+    background-color: green;
+    color: white;
+}
+.snackbar_success button {
+    color: white;
+}
+
+.snackbar_error {
+    background-color: red;
+    color: white;
+}
+.snackbar_error button{
+    color: white;
+}
