--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-    <div class="welcome_message">
+    <div class="form_container">
         <h2>Welcome in the reservation portal!</h2>
         <img src="../../../assets/dentist.icon.png" alt="">
     </div>
-        
 </div>
 
