--- a/angular-client/src/app/components/home/home.component.css
+++ b/angular-client/src/app/components/home/home.component.css
@@ -1,24 +1,7 @@
-.container {
-  display: flex;
-  box-sizing: border-box;
-  height: 100%;
-}
-
-.welcome_message {
-  margin: 0px auto;
-  align-self: center;
-  border: 3px solid green;
-  width: 50%;
-  padding: 20px 0;
-}
-
-.welcome_message h2 {
+.form_container h2 {
   text-align: center;
 }
-
-  
-
-.welcome_message img {
+.form_container img {
   width: 220px;
   margin: 0px auto;
   display: block;
